refactor(next-storage): streamline storage provider API